[gd_scene load_steps=15 format=3 uid="uid://blowmwdoix63e"]

[ext_resource type="Script" uid="uid://bxmshfcqsgjq5" path="res://missions/mission_8.gd" id="1_jnjbr"]
[ext_resource type="Texture2D" uid="uid://c3rbq7njvoaf0" path="res://art/ice_floor3.png" id="2_uf1xv"]
[ext_resource type="PackedScene" uid="uid://cnewpfj0saicm" path="res://missions/Hud_Mission.tscn" id="3_6jfpp"]
[ext_resource type="AudioStream" uid="uid://532t1b3ql5ff" path="res://sound/bgm.mp3" id="4_gxfqv"]
[ext_resource type="Script" uid="uid://be8h6oqce2lfd" path="res://Music.gd" id="5_ehf6t"]
[ext_resource type="AudioStream" uid="uid://rsh6crkjjxk4" path="res://art/gameover.wav" id="6_3c3et"]
[ext_resource type="Script" uid="uid://fh8j43g4cbk6" path="res://DeathBox.gd" id="7_gxdl5"]
[ext_resource type="Texture2D" uid="uid://c3avc7vwurlau" path="res://art/water.png" id="8_ijb1k"]
[ext_resource type="Texture2D" uid="uid://dxhgr6yrn6k0m" path="res://art/water2.png" id="9_t2caa"]
[ext_resource type="Texture2D" uid="uid://drbrjkugh322n" path="res://art/props/fish/Salmon.png" id="10_yhsuh"]
[ext_resource type="PackedScene" uid="uid://dtevh17wsaoom" path="res://Player.tscn" id="11_obk13"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_2lshl"]
frames = 2
speed_scale = 2.0
frame_0/texture = ExtResource("8_ijb1k")
frame_1/texture = ExtResource("9_t2caa")
frame_1/duration = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy06k"]
size = Vector2(480, 80)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7v0be"]
radius = 7.45199

[node name="Mission8" type="Node"]
script = ExtResource("1_jnjbr")

[node name="ColorRect2" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -152.0
offset_right = 272.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="IceTextureFloor" type="TextureRect" parent="."]
self_modulate = Color(0.972549, 1, 1, 0.784314)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -1.0
offset_right = 120.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uf1xv")
expand_mode = 2
stretch_mode = 1
flip_h = true
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD_Mission" parent="." instance=ExtResource("3_6jfpp")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gxfqv")
script = ExtResource("5_ehf6t")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3c3et")

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(0, 720)
collision_mask = 3
script = ExtResource("7_gxdl5")

[node name="WaterTexture" type="TextureRect" parent="DeathBox"]
modulate = Color(1, 1, 1, 0.686275)
texture_filter = 1
offset_top = -128.0
offset_right = 480.0
texture = SubResource("AnimatedTexture_2lshl")
expand_mode = 4
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
position = Vector2(240, -40)
shape = SubResource("RectangleShape2D_xy06k")
debug_color = Color(0.980369, 0, 0.380257, 0.42)

[node name="Fish1" type="Area2D" parent="."]
position = Vector2(400, 560)
rotation = -1.95477

[node name="Sprite2D" type="Sprite2D" parent="Fish1"]
rotation = -1.25664
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_yhsuh")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish1"]
position = Vector2(2, -1)
rotation = 0.916298
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_7v0be")

[node name="Fish2" type="Area2D" parent="."]
position = Vector2(87.9999, 323)
rotation = -1.53589
skew = -0.279253

[node name="Sprite2D" type="Sprite2D" parent="Fish2"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_yhsuh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish2"]
position = Vector2(2, -1)
rotation = 0.916298
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_7v0be")

[node name="Fish3" type="Area2D" parent="."]
position = Vector2(232, 128)

[node name="Sprite2D" type="Sprite2D" parent="Fish3"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_yhsuh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish3"]
position = Vector2(2, -1)
rotation = 0.916298
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_7v0be")

[node name="Fish4" type="Area2D" parent="."]
position = Vector2(384, 232)
rotation = 1.11701
skew = 0.139626

[node name="Sprite2D" type="Sprite2D" parent="Fish4"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_yhsuh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish4"]
position = Vector2(2, -1)
rotation = 0.916298
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_7v0be")

[node name="Fish5" type="Area2D" parent="."]
position = Vector2(168, 480)
rotation = 1.11701
skew = 0.139626

[node name="Sprite2D" type="Sprite2D" parent="Fish5"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_yhsuh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish5"]
position = Vector2(2, -1)
rotation = 0.916298
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_7v0be")

[node name="Player" parent="." instance=ExtResource("11_obk13")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="finished" from="Music" to="Music" method="_on_finished"]
[connection signal="body_entered" from="DeathBox" to="Player" method="_on_death_box_body_entered"]
[connection signal="body_entered" from="Fish1" to="." method="_on_fish_body_entered" binds= [1]]
[connection signal="body_entered" from="Fish2" to="." method="_on_fish_body_entered" binds= [2]]
[connection signal="body_entered" from="Fish3" to="." method="_on_fish_body_entered" binds= [3]]
[connection signal="body_entered" from="Fish4" to="." method="_on_fish_body_entered" binds= [4]]
[connection signal="body_entered" from="Fish5" to="." method="_on_fish_body_entered" binds= [5]]
[connection signal="fell" from="Player" to="." method="_on_player_fell"]
